--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               userName: userId
             })
             vex.dialog.alert('Your account has been created');
-            window.location.href("dashboard.html");
+            window.open("dashboard.html");
 
             //End of firebase function 
 
