--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1 class="project-name">ShareBeats</h1>
     <h2 class="project-tagline">Your Hub to Share some Beats with your Pals!</h2>
     <button href="#" class="btn" onclick="userSignUp()">Sign Up</button>
-    <button href="dashboard.html" class="btn">Log In</button><br><br>
+    <button onclick="goTo()" class="btn">Log In</button><br><br>
     <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a>
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
   </section>
@@ -115,6 +115,10 @@
           }
         }
       })
+      
+      function goTo(){
+        window.open("dashboard.html");
+      }
 
     }
   </script>
