Updated the loading location

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 </head>
 
 <body onload="load()">
+  <script type="text/javascript">function goTo(){
+        window.open("dashboard.html");
+      }</script>
   <section class="page-header">
     <h1 class="project-name">ShareBeats</h1>
     <h2 class="project-tagline">Your Hub to Share some Beats with your Pals!</h2>
