--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#157878">
   <link rel="stylesheet" href="css/normalize.css">
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/cayman.css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/cayman.css">
   <link rel="stylesheet" href="css/vex.css" />
   <link rel="stylesheet" type="text/css" href="css/vex-theme-os.css" />
 
@@ -19,12 +19,17 @@
         window.open("dashboard.html");
       }</script>
   <section class="page-header">
-    <h1 class="project-name">ShareBeats</h1>
+    <section class="page-header">
+      <h1 class="project-name">ShareBeats</h1>
     <h2 class="project-tagline">Your Hub to Share some Beats with your Pals!</h2>
-    <button href="#" class="btn" onclick="userSignUp()">Sign Up</button>
-    <button onclick="goTo()" class="btn">Log In</button><br><br>
-    <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a>
+      <a href="#" class="btn" onclick="userSignUp()">Sign Up</a>
+      <a href="#" class="btn" onclick="goTo()">Sign In</a><br>
+      <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a>
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+      
+    </section>
+    
+   
   </section>
 
   <section class="main-content">
