Added a load of new features

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="css/normalize.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/cayman.css">
+    <link rel="stylesheet" href="css/awesomplete.css" />
+
   <link rel="stylesheet" href="css/vex.css" />
   <link rel="stylesheet" type="text/css" href="css/vex-theme-os.css" />
 
@@ -18,7 +20,7 @@
   <script type="text/javascript">function goTo(){
         window.open("dashboard.html");
       }</script>
-  <section class="page-header">
+  
     <section class="page-header">
       <h1 class="project-name">ShareBeats</h1>
     <h2 class="project-tagline">Your Hub to Share some Beats with your Pals!</h2>
@@ -28,24 +30,22 @@
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
       
     </section>
-    
-   
-  </section>
+  
 
   <section class="main-content">
 
-    <p><code><b>ShareBeats is a simple music sharing website which allows you to share music with your friends with just a click.</b></code></p>
+    <p><b>ShareBeats is a simple music sharing website which allows you to share music with your friends with just a click.</b></p>
 
-    <p><code>ShareBeats was born when a bunch of youngsters found it difficult to follow the new trends in the music world, by sharing their songs over WhatsApp and Messenger. We wanted to make a service that all of us could use to share our favourite songs with just a click and here is the result of 72 hours of work.</code></p>
+    <p>ShareBeats was born when a bunch of youngsters found it difficult to follow the new trends in the music world, by sharing their songs over WhatsApp and Messenger. We wanted to make a service that all of us could use to share our favourite songs with just a click and here is the result of 72 hours of work.</p>
     <p><a href="https://unsplash.com/@arstyy?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank"><img src="css/austin-neill-247047.jpg" alt="" data-canonical-src="https://placekitten.com/g/1200/800/" style="max-width:100%;"></a></p>
 
-    <pre><code>Unleash your Beats - Photo by <a href="https://unsplash.com/@arstyy?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge">Austin Neil</a> from <a href="www.unsplash.com">Unsplash</a></code></pre>
+    <pre>Photo by <a href="https://unsplash.com/@arstyy?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge">Austin Neil</a> - <a href="www.unsplash.com">Unsplash</a></pre>
 
-    <p><code><b>How to use ShareBeats?</b> <br>It's pretty simple. First time users must sign up, and those who visit us again must login. Your dashboard has the list of music people have shared with you. Click the <b>ShareBeats</b>  button to share music with your firends. Enter your friend's username (aided with a simple autocomplete) and your favourite track. Then you are good to go</code></p>
+    <p><b>How to use ShareBeats?</b> <br>It's pretty simple. First time users must sign up, and those who visit us again must login. Your dashboard has the list of music people have shared with you. Click the <b>ShareBeats</b>  button to share music with your firends. Enter your friend's username (aided with a simple autocomplete) and your favourite track. Then you are good to go</p>
 
-    <p><code>Good luck from ShareBeats Team</code></p>
+    <p>Good luck from ShareBeats Team</p>
 
-    <p><code>Please tweet your feedback here </code><a href="https://twitter.com/intent/tweet?screen_name=harsith2002" class="twitter-mention-button" data-show-count="false">Tweet to @harsith2002</a>
+    <p>Please tweet your feedback here  <a href="https://twitter.com/intent/tweet?screen_name=harsith2002" class="twitter-mention-button" data-show-count="false">Tweet to @harsith2002</a>
       <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     </p>
 
@@ -60,6 +60,16 @@
   <script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+   <script src="js/awesomplete.js" async></script>
+   <!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-107288839-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments)};
+  gtag('js', new Date());
+
+  gtag('config', 'UA-107288839-1');
+</script>
 </body>
 
 </html>
