Added the username, password alert boxes

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 </head>
 
 <body onload="load()">
-  <script type="text/javascript">function goTo(){
-        window.open("dashboard.html");
+  <script type="text/javascript">
+    function goTo(){
+        window.location.href=("dashboard.html");
       }</script>
   
     <section class="page-header">
