--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    
     <link rel="stylesheet" href="css/cayman.css">
     <link rel="stylesheet" href="css/awesomplete.css" />
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
   <link rel="stylesheet" href="css/vex.css" />
   <link rel="stylesheet" type="text/css" href="css/vex-theme-os.css" />
@@ -25,7 +26,7 @@
     <section class="page-header">
       <h1 class="project-name">ShareBeats</h1>
     <h2 class="project-tagline">Your Hub to Share some Beats with your Pals!</h2>
-      <a href="#" class="btn" onclick="userSignUp()">Sign Up</a>
+      
       <a href="#" class="btn" onclick="goTo()">Sign In</a><br>
       <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a>
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -34,6 +35,12 @@
   
 
   <section class="main-content">
+    <h5>Sign Up</h5>
+    
+      <input type="text" placeholder="Username" id="userName"><br><br>
+      <input type="email" placeholder="Email" id="userEmail"><br><br>
+      <input type="password" placeholder="Password" id="userPassword"><br><br>
+    <button placeholder="Sign Up" onclick="userSignUp()"> Sign Up </button>  <br><br>
 
     <p><b>ShareBeats is a simple music sharing website which allows you to share music with your friends with just a click.</b></p>
 
