Fixed onload() error

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 </head>
 
-<body >
+<body onload="load()">
   <section class="page-header">
     <h1 class="project-name" id="project-name">ShareBeats</h1>
     <h2 class="project-tagline" id="project-tagline">Your Hub to Share some Beats with your Pals!</h2>
