--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <h1 class="project-name" id="project-name">ShareBeats</h1>
     <h2 class="project-tagline" id="project-tagline">Your Hub to Share some Beats with your Pals!</h2>
     <button href="#" class="btn" onclick="shareMusic()" id="share_music">Share some Beats!</button>
-    <button href="#" class="btn" onclick="getMusic()" id="get_music" >Get my Beats!</button>
+    <button href="#" class="btn" onclick="getMusic()" id="get_music" >Get my Beats!</button><br>
+      <div class="g-signin2" data-onsuccess="onSignIn"></div>
+
     <br>
      
 
