--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   <link rel="stylesheet" type="text/css" href="css/vex-theme-os.css" />
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="css/awesomplete.css" />
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script type="text/javascript" src="js/vex.combined.min.js"></script> 
+  <script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
+  <script src="js/awesomplete.js" async></script><script type="text/javascript" src="js/index.js"></script>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
   
@@ -54,11 +58,8 @@
     
     
   </section>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-  <script type="text/javascript" src="js/vex.combined.min.js"></script> 
-  <script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
-  <script src="js/awesomplete.js" async></script>
-  <script type="text/javascript" src="js/index.js"></script>
+  
+  
 <!-- Global Site Tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107288839-2"></script>
 <script>
