--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<meta name="msapplication-TileImage" content="../static/img/favicon/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<title>Mimo - Learn to code on the go</title>
+	<title>ShareBeats</title>
 	<link rel="stylesheet" href="static/css/main.min.css">
 
 	
