--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	    <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-database.js"></script>
-<script type="text/javascript" src="app.js"></script>
+<script type="text/javascript" src="index.js"></script>
 
 <section id="base" onload="login_load()">
 	<div id="empty"></div>
