--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <!-- Mirrored from getmimo.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 17 Oct 2017 10:42:36 GMT -->
 <head>
 	<meta charset="utf-8">
+  <meta name="google-signin-client_id" content="797428156625-bdcm4pn4gdslofiplg4451lc7rp1t4j8.apps.googleusercontent.com">
+
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Mimo is an iOS app that teaches programming, HTML, CSS, JavaScript, Swift, and more through gamified and interactive lessons on the go">
@@ -48,7 +50,7 @@
 	
 </head>
 <body>
-  <script src="https://apis.google.com/js/api.js"></script>    
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
 	<!-- this is where your index.nunjucks file will be displayed -->
 	    <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-app.js"></script>
@@ -60,7 +62,8 @@
 
 	<section id="preview">
 		<!--- This is where the SoundCloud podcast explaining the story behind ShareBeats will be included --> 
-		
+		<div class="g-signin2" data-onsuccess="onSignIn"></div>
+
 	</section>
 
 	<section id="main">
